--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JSGames</title>
-</head>
-<body>
-    <script src="invaders/invaders.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JSGames</title>
+  </head>
+  <body>
+    <script type="module" src="invaders/invaders.js"></script>
+  </body>
 </html>
