--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css"></link>
     <title>JSGames</title>
   </head>
   <body>
     <script type="module" src="invaders/invaders.js"></script>
+
+    <canvas class="game-board"></canvas>
   </body>
 </html>
