refactor to a more object oriented approach

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>JSGames</title>
   </head>
   <body>
-    <script type="module" src="invaders/invaders.js"></script>
+    <script type="module" src="invaders/main.js"></script>
 
     <canvas class="game-board"></canvas>
   </body>
